--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <button class="l drum">l</button>
     </div>
 
-    <footer>Let's play some music with ❤️</footer>
+    <footer>Let's play ❤️ some music with code!</footer>
     <script src="./index.js" charset="utf-8"></script>
   </body>
 </html>
